update post news, display news

--- a/resources/views/categories-sci.edge
+++ b/resources/views/categories-sci.edge
@@ -11,102 +11,20 @@
 
     <div class="type-articles-block">
         <div class="news-component">
+            @each(add in news_display)
             <div class="news-content-show">
                 <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
                 <div class="news-content-lebel">
-                    {{ news_Topic }}
+                    {{ add.news_Topic }}
                 </div>
                 <div class="news-content" >
-                    {{ news_Content }}
+                    {{ add.news_Content }}
                 </div>
                 <div class="news-content-date">
-                    {{ news_Date }}
+                    {{ add.news_Date }}
                 </div>
             </div>
-            <div class="news-content-show">
-                <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
-                <div class="news-content-lebel">
-                    Lorem Ipsum
-                </div>
-                <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
-                </div>
-                <div class="news-content-date">
-                    10-28-2019
-                </div>
-            </div>
-            <div class="news-content-show">
-                <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
-                <div class="news-content-lebel">
-                    Lorem Ipsum
-                </div>
-                <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
-                </div>
-                <div class="news-content-date">
-                    10-28-2019
-                </div>
-            </div>
-            <div class="news-content-show">
-                <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
-                <div class="news-content-lebel">
-                    Lorem Ipsum
-                </div>
-                <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
-                </div>
-                <div class="news-content-date">
-                    10-28-2019
-                </div>
-            </div>
-            <div class="news-content-show">
-                <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
-                <div class="news-content-lebel">
-                    Lorem Ipsum
-                </div>
-                <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
-                </div>
-                <div class="news-content-date">
-                    10-28-2019
-                </div>
-            </div>
-            <div class="news-content-show">
-                <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
-                <div class="news-content-lebel">
-                    Lorem Ipsum
-                </div>
-                <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
-                </div>
-                <div class="news-content-date">
-                    10-28-2019
-                </div>
-            </div>
-            <div class="news-content-show">
-                <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
-                <div class="news-content-lebel">
-                    Lorem Ipsum
-                </div>
-                <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
-                </div>
-                <div class="news-content-date">
-                    10-28-2019
-                </div>
-            </div>
-            <div class="news-content-show">
-                <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
-                <div class="news-content-lebel">
-                    Lorem Ipsum
-                </div>
-                <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
-                </div>
-                <div class="news-content-date">
-                    10-28-2019
-                </div>
-            </div>
+            @endeach          
         </div>
     </div>
 
