--- a/public/css/news.css
+++ b/public/css/news.css
@@ -58,20 +58,41 @@
     border: none;
     outline: none;
 }
-.comment-submit-button {
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 15%;
-}
-.inside-comment-container button {
-    color: #2a81b8;
-    font-size: 1.5rem;
-    width: 15%;
-    height: 25%;
-    border: 2px solid #2a81b8;
-    background-color: transparent;
+
+.inside-comment-container input[type="text"] :hover {
+    margin-left: 5%;
+    height: 50px;
+    width: 100%;
+    border: none;
     outline: none;
 }
+
+.comment-submit-button-block {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 25%;
+}
+
+.nav-submit-component {
+    font-size: 1.10rem;
+    margin: 0;
+    color: #fff;
+    background-color:#2997db;
+    border: 1px solid #2997db;
+    border-radius: 20px;
+    padding: 5px 15px;
+    text-decoration: none;
+}
+
+.nav-submit-component:hover {
+    font-size: 1.10rem;
+    background-color: #fff;
+    border: 1px solid #2997db;
+    color: #2997db;
+    outline: none;
+    cursor: pointer;
+}
+
 .comment-underline {
     margin-top: 2%;
     margin-bottom: 2%;
