--- a/resources/views/news_5.edge
+++ b/resources/views/news_5.edge
@@ -13,7 +13,7 @@
         </div>
         <div class="news-body">
             <h2>
-                <div class="news-content">
+                <div class="news-content-post">
                     <p>{{ add.news_Content }}</p>
                 <div class="news-date">
                     <p>{{ add.news_Date }}</p>
@@ -33,9 +33,12 @@
                             <h2>Sir. {{currentUsername}}</h2>
                             {{ csrfField() }}
                             <input type="text" name="cm_Content" placeholder="Add a public comment">
-                            <div class="comment-submit-button">
-                                <button type="submit">SUBMIT</button>
+                            <div class="comment-submit-button-block">
+                                <div class="comment-submit-button">
+                                    <button class="nav-submit-component" type="submit">SUBMIT</button>
+                                </div>
                             </div>
+                            
                         @endif
                     </div>
                 </div>
