update post image

--- a/resources/views/categories-world.edge
+++ b/resources/views/categories-world.edge
@@ -12,7 +12,7 @@
         <div class="news-component">
             @each(add in news_display)
             <div class="news-content-show">
-                <img class="news-content-image"src="https://wallup.net/wp-content/uploads/2017/11/23/506368-Earth-Moon-minimalism-stars-space-kurzgesagt-748x421.jpg" >
+                <img class="news-content-image"src="https://i.pinimg.com/originals/11/2c/07/112c0718eeafdb00bebc9874376cd6b8.jpg" >
                 <div class="news-content-lebel">
                     {{ add.news_Topic }}
                 </div>
