--- a/public/css/home.css
+++ b/public/css/home.css
@@ -101,22 +101,24 @@
 .slideshow-outest-container {
     position: relative;
     width: 100%;
-    height: 90%;
+    height: 100%;
     overflow: hidden;
 }
 .slideshow-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
 }
 .slideshow-pictures{
     display: flex;
     flex-direction: row;
 }
-.slideshow-pictures img{
+.slideshow-pictures a{
     width: 100%;
+    height: 100%;
+}
+.slideshow-pictures img{
+    width: 100vw;
+    height: 100vh;
 }
 .slideshow-button {
     position: absolute;
