--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -54,7 +54,11 @@
         </div>
 
         <div class="tag-block">
+            <a href="/categories-world"><i class="fas fa-globe-americas"></i></a> 
             
+            <a href="/categories-tech"><i class="fas fa-microchip"></i></a>
+            <a href="/categories-sci"><i class="fas fa-flask"></i></a>
+            <a href="/categories-business"><i class="fas fa-comment-dollar"></i></a>
         </div>
 
         <div class="type-articles-block">
