--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -21,16 +21,16 @@
             <div class="slideshow s1">
                 <div class="slideshow-pictures">
                     <a href="./news_1">
-                        <img src="./images/01.jpg" class="slide-image">
+                        <img src="https://www.catdumb.tv/wp-content/uploads/2020/08/1-50.jpg" class="slide-image">
                     </a>
                     <a href="./news_2">
-                        <img src="./images/02.jpg" class="slide-image">
+                        <img src="https://www.catdumb.tv/wp-content/uploads/2020/08/1-35.jpg" class="slide-image">
                     </a>
                     <a href="./news_3">
-                        <img src="./images/03.jpg" class="slide-image">
+                        <img src="https://www.catdumb.tv/wp-content/uploads/2020/07/2-11.jpg" class="slide-image">
                     </a>
                     <a href="./news_4">
-                        <img src="./images/04.jpg" class="slide-image">
+                        <img src="https://www.catdumb.tv/wp-content/uploads/2020/05/John-Wick-And-Daisy-The-Dog.jpg" class="slide-image">
                     </a>
                 </div>
             </div>
