fix post token login

--- a/resources/views/add-news.edge
+++ b/resources/views/add-news.edge
@@ -7,7 +7,7 @@
     <div class="add-background">
         <div class="add-lebel">BLOG</div>
         <div class="add-input-block">
-            <form action="{{route('/addnews')}}" method="POST">
+            <form action="{{route('/add-news')}}" method="POST">
                 {{csrfField()}}
                 <div class="input-lebel" >
                     BLOG NAME
