--- a/public/css/home.css
+++ b/public/css/home.css
@@ -17,8 +17,12 @@
     margin: 0 0 0 8%;
 }
 
+.categories {
+    margin-bottom:50px;
+}
+
 .type-articles-block {
-    margin: 80px 0 0 0;
+    margin: 80px 0 50px 0;
 }
 
 .articles-label-block {
