--- a/resources/views/categories-tech.edge
+++ b/resources/views/categories-tech.edge
@@ -9,22 +9,23 @@
         Tech
     </div>
 
-    <div class="type-articles-block">
-        <div class="news-component">
-            @each(add in news_display)
-            <div class="news-content-show">
-                <img class="news-content-image"src="https://i.pinimg.com/originals/33/95/75/33957573bdb5c562fa3ddad76867e0ac.jpg" >
-                <div class="news-content-lebel">
-                    {{ add.news_Topic }}
+    <div class="categories">
+        <div class="type-articles-block">
+            <div class="news-component">
+                @each(add in news_display)
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/11/2c/07/112c0718eeafdb00bebc9874376cd6b8.jpg" >
+                    <div class="news-content-lebel">
+                        {{ add.news_Topic }}
+                    </div>
+                    <div class="news-content" >
+                        {{ add.news_Content }}
+                    </div>
+                    <div class="news-content-date">
+                        {{ add.news_Date }}
+                    </div>
                 </div>
-                <div class="news-content" >
-                    {{ add.news_Content }}
-                </div>
-                <div class="news-content-date">
-                    {{ add.news_Date }}
-                </div>
-            </div>
-            @endeach           
+                @endeach                      
             </div>
         </div>
     </div>
