fix world ouput

--- a/resources/views/categories-world.edge
+++ b/resources/views/categories-world.edge
@@ -1,6 +1,7 @@
 @layout("layout")
 @section("style-section")
     {{style("css/categories")}}
+    {{style("css/categories-world")}}
 @endsection
 @section("content")
 
@@ -9,8 +10,8 @@
     </div>
     <div class="categories">
         <div class="type-articles-block">
+            <a href="/news_5">
             <div class="news-component">
-                <a href="/news_5">
                 @each(add in news_display)
                 <div class="news-content-show">
                     <img class="news-content-image"src="https://i.pinimg.com/originals/11/2c/07/112c0718eeafdb00bebc9874376cd6b8.jpg" >
@@ -25,8 +26,8 @@
                     </div>
                 </div>
                 @endeach
-                </a>                 
             </div>
+        </a>                 
         </div>
     </div>
     
